--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "puppeteer-core": "^21.6.1",
     "react": "^18",
     "react-dom": "^18"
   },
